# React-MininStance

./: Cargo.toml  Config.toml  compose.yaml  pgbouncer.ini  userlist.txt
crates/api_gateway/: Cargo.toml  Config.toml  Dockerfile
crates/api_gateway/src/: auth.rs  handlers.rs  main.rs  routing.rs
crates/auth_captcha/: Cargo.toml
crates/auth_captcha/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/config_manager/: Cargo.toml
crates/config_manager/src/: lib.rs
crates/data_models/: Cargo.toml
crates/data_models/migrations/00001_create_tasks/: up.sql
crates/data_models/migrations/00002_create_instances_and_users/: down.sql  up.sql
crates/data_models/migrations/00003_add_user_id_to_instances/: down.sql  up.sql
crates/data_models/migrations/00004_add_endpoint_to_instances/: up.sql
crates/data_models/migrations/00004_system_user/: down.sql  up.sql
crates/data_models/migrations/00005_add_endpoint_to_instances/: down.sql
crates/data_models/migrations/00006_delete_port_field/: down.sql  up.sql
crates/data_models/src/: lib.rs
crates/data_models/tests/: integration.rs
crates/deploy_service/: Cargo.toml
crates/deploy_service/src/: docker.rs  error.rs  lib.rs
crates/deploy_service/tasks/foo_task/: Dockerfile
crates/port_manager/: Cargo.toml
crates/port_manager/src/: lib.rs
crates/scheduler_service/: Cargo.toml  Dockerfile
crates/scheduler_service/src/: error.rs  lib.rs  main.rs
frontend/: Dockerfile.frontend  compose.yaml  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/components/: InstanceCard.tsx  InstanceModal.tsx  Navbar.tsx  TaskCard.tsx
frontend/context/: AuthContext.tsx
frontend/hooks/: useAuth.ts
frontend/lib/: api.ts
frontend/types/: index.ts
tasks/foo_task/: Dockerfile  server.py
