[package]
name = "api_gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["rt-multi-thread","macros"] }
thiserror = "2.0.12"
futures-util = "0.3.31"

common          = { path = "../common" }
config_manager  = { path = "../config_manager" }
deploy_service  = { path = "../deploy_service" }
data_models     = { path = "../data_models" }
auth_captcha    = { path = "../auth_captcha" }
chrono = "0.4.41"
uuid = { version = "1.17.0", features = ["v4"] }

[[bin]]
name = "api_gateway"
path = "src/main.rs"