[package]
name = "auth_captcha"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
config_manager = { path = "../config_manager" }
serde_json = "1.0.142"
tokio = "1.47.1"
bytes = "1.10.1"


[dev-dependencies]
http = "1.3.1"
tower = "0.5.2"
tokio = { version = "1.47.1", features = ["rt", "macros"] }
