[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
chrono = { version = "0.4.41", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
diesel = "2.2.12"

config_manager = { path = "../config_manager" }
r2d2 = "0.8.10"