[package]
name = "deploy_service"
version = "0.1.0"
edition = "2024"

[dependencies]
bollard = { version = "0.19.2", features = ["tokio-stream"] }
uuid = { version = "1.17.0", features = ["v4"] }
tokio = { version = "1.47.1", features = ["rt","macros"] }
thiserror = "2.0.12"
tar = "0.4.44"

config_manager = { path = "../config_manager" }
data_models     = { path = "../data_models" }
common          = { path = "../common" }
futures-util = "0.3.31"
bytes = "1.10.1"
chrono = "0.4.41"
hyper = "1.6.0"
http-body-util = "0.1.3"
