[package]
name = "scheduler_service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["rt","macros"] }
config_manager = { path = "../config_manager" }
deploy_service  = { path = "../deploy_service" }
data_models     = { path = "../data_models" }
common          = { path = "../common" }
thiserror       = "2.0.12"
tracing         = "0.1.41"
chrono = "0.4.41"

[[bin]]
name = "scheduler_service"
path = "src/main.rs"